fix: gutter gaps in color gutter and move to editor from cm gutter apis

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -2962,6 +2962,7 @@ textarea.exclusions-editor {
 .CodeMirror .code-inspection-gutter {
     width: 1em;
     background-color: transparent;
+    text-align: center;
 }
 
 .brackets-inspection-gutter-marker {
@@ -2970,7 +2971,7 @@ textarea.exclusions-editor {
     line-height: 1em;
     height: 1em;
     width: 1em;
-    font-size: .8em;
+    font-size: .7em;
     pointer-events: auto;
 }
 
